Fixed issue where calc gets too skinny or wide
Made min-width 400px and max-width 500px so it doesn't get way too wide when the screen is expanded to full screen and so it doesn't get too small when the screen is shrunk.

--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ header {
     left: 50%;
     height: 625px;
     width: 50%;
+    min-width: 400px;
+    max-width: 500px;
     background-color: rgb(150, 216, 216);
 }
 
